<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="8dp">

    <ImageView
        android:id="@+id/imageViewProductImage"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:gravity="center"
        android:scaleType="centerCrop"
        android:src="@drawable/ic_launcher_background"
        android:contentDescription="@string/product_image_description" />

    <TextView
        android:id="@+id/textViewProductName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/product_name"
        android:textSize="16sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textViewProductPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/product_price" />

    <TextView
        android:id="@+id/textViewProductDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/product_description" />

    <Button
        android:id="@+id/btnDeleteProduct"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/delete" />
</LinearLayout>
