<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">

    <EditText
        android:id="@+id/editTextProductName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/product_name_hint"
        android:inputType="text" />

    <EditText
        android:id="@+id/editTextProductPrice"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/product_price_hint"
        android:inputType="numberDecimal" />

    <EditText
        android:id="@+id/editTextProductInfo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/product_info_hint"
        android:inputType="textMultiLine" />

    <EditText
        android:id="@+id/editTextStoreName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/store_name_hint"
        android:inputType="text" />

    <Spinner
        android:id="@+id/spinnerProductCategory"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:entries="@array/product_categories" />

</LinearLayout>
