<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:background="#404040"> <!-- Arka plan rengini siyah yaptım -->

    <TextView
        android:id="@+id/textViewWelcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ho_geldiniz"
        android:textSize="24sp"
        android:textColor="#FFFFFF"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="48dp" />



    <EditText
        android:id="@+id/emailAddressEditText"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_below="@id/textViewWelcome"
        android:layout_marginTop="29dp"
        android:backgroundTint="#FFFFFF"
        android:hint="@string/emailadres"
        android:textColor="#FFFFFF"
        android:textColorHint="#FFFFFF"
        android:inputType="textEmailAddress"
        tools:ignore="Autofill,VisualLintTextFieldSize" />

    <EditText
        android:id="@+id/passwordEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/emailAddressEditText"
        android:layout_marginTop="16dp"
        android:backgroundTint="#FFFFFF"
        android:hint="@string/password"
        android:textColor="#FFFFFF"
        android:textColorHint="#FFFFFF"
        android:inputType="textPassword"
        android:minHeight="48dp"
        tools:ignore="Autofill,TouchTargetSizeCheck" />

    <Button
        android:id="@+id/buttonForgotPassword"
        android:layout_width="165dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/passwordEditText"
        android:layout_alignParentStart="true"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="8dp"
        android:background="#BB86FC"
        android:text="@string/sifremi_unuttum"
        android:textColor="#FFFFFF"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/buttonRegister"
        android:layout_width="195dp"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/buttonForgotPassword"
        android:layout_marginStart="16dp"
        android:layout_toEndOf="@+id/buttonForgotPassword"
        android:background="#BB86FC"
        android:text="@string/kayit_ol"
        android:textColor="#FFFFFF"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/signInButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/buttonForgotPassword"
        android:layout_marginTop="16dp"
        android:background="#4C387A"
        android:text="@string/giris"
        android:textColor="#FFFFFF"
        tools:ignore="VisualLintButtonSize" />

    <Switch
        android:id="@+id/switchShowHidePassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="191dp"
        android:layout_marginEnd="7dp"
        android:text="Şifreyi Göster"
        tools:ignore="UseSwitchCompatOrMaterialXml" />


</RelativeLayout>
