<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    tools:ignore="VisualLintTextFieldSize">

    <!-- Ürün listesi için RecyclerView -->
    <androidx.appcompat.widget.SearchView
        android:id="@+id/searchView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_toStartOf="@+id/btnCategories"
        android:layout_weight="1"
        android:elevation="4dp"
        android:queryHint="Ürün ara..."
        app:iconifiedByDefault="false" />

    <ImageButton
        android:id="@+id/btnCategories"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="3dp"
        android:layout_marginEnd="12dp"
        android:contentDescription="@string/home_description"
        android:scaleType="centerCrop"
        android:src="@drawable/kategoriler"
        tools:ignore="TouchTargetSizeCheck" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvProductList"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/llButtonGroup"
        android:layout_below="@id/searchView"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="0dp"
        android:layout_marginBottom="4dp" />

    <LinearLayout
        android:id="@+id/llButtonGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal"
        android:gravity="center"
        android:background="@color/black">

        <ImageButton
            android:id="@+id/btnProfile"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="@string/profile_description"
            android:scaleType="centerCrop"
            android:src="@drawable/profil" />

        <!-- "Beğendiklerim" ImageButton -->
        <ImageButton
            android:id="@+id/btnFavorites"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="@string/favorites_description"
            android:src="@drawable/begendikerlim" />

        <!-- "Ekle" ImageButton -->
        <ImageButton
            android:id="@+id/btnAdd"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:src="@drawable/urunekleme"
            android:contentDescription="@string/add_description" />

        <!-- "Sepetim" ImageButton -->
        <ImageButton
            android:id="@+id/btnCart"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:src="@drawable/sepetim"
            android:contentDescription="@string/cart_description" />
    </LinearLayout>

</RelativeLayout>
