<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <!-- Geri dön butonu -->
    <ImageView
        android:id="@+id/backButton"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:padding="12dp"
        android:layout_alignParentStart="true"
        android:clickable="true"
        android:focusable="true"
        android:contentDescription="@string/back" />


    <SearchView
        android:id="@+id/searchView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="-12dp"
        android:layout_marginEnd="12dp"
        android:layout_toStartOf="@+id/cartButton"
        android:layout_toEndOf="@id/backButton"
        android:iconifiedByDefault="false"
        />

    <ImageView
        android:id="@+id/cartButton"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:padding="12dp"
        android:layout_alignParentEnd="true"
        android:clickable="true"
        android:focusable="true"
        android:contentDescription="@string/cart" />

    <!-- Ürün Resmi -->

    <!-- Ürün Adı -->
    <ImageView
        android:id="@+id/productImage"
        android:layout_width="395dp"
        android:layout_height="355dp"
        android:layout_below="@id/searchView"
        android:layout_marginTop="-7dp"
        android:scaleType="centerCrop" />

    <TextView
        android:id="@+id/productName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/productImage"
        android:layout_marginTop="30dp"
        android:text="Ürün Adı"
        android:textAppearance="?attr/textAppearanceHeadline6" />

    <!-- Ürün Fiyatı -->
    <TextView
        android:id="@+id/productPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/productName"
        android:layout_marginTop="40dp"
        android:text="₺179,90"
        android:textAppearance="?attr/textAppearanceHeadline6" />

    <!-- Ürün Açıklaması -->
    <TextView
        android:id="@+id/productDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/productPrice"
        android:layout_marginTop="15dp"
        android:text="Bu kısım ürün açıklamasını içerir." />

    <!-- Beğen butonu -->

    <!-- Alt butonlar -->

    <ImageView
        android:id="@+id/buttonFavoriKalp"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="6dp"
        android:clickable="true"
        android:contentDescription="@string/add_to_favorites"
        android:focusable="true"
        android:foregroundTint="#682020"
        android:src="@drawable/begeniekleem" />

        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="16dp"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/addToCartButton"
            android:layout_width="8dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="sepete ekle" />

        <Button
            android:id="@+id/buyNowButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="satın al " />
    </LinearLayout>

</RelativeLayout>